[package]
name = "triangle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "3.3.3", default-features = false }
askama = { version = "0.10.5", default-features = false, features = ["with-actix-web"] }
askama_actix = "0.11.1"

toml = "0.5"
serde = "1"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = { version = "3.0.12", features = ["derive"] }

notify = "4.0.17"
parking_lot = "0.11.2"
